# mcpsock

./: .coverage  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml
examples/: connection_tracking.py
src/mcpsock/: __init__.py  client.py  server.py
tests/: conftest.py  test_client.py  test_connection_tracking.py  test_init.py  test_server.py  test_traceback_coverage.py
